// Vitest Snapshot v1

exports[`Card > should handle click 1`] = `
<DocumentFragment>
  <div>
    <button
      class="css-116zvw2"
      data-testid="Card"
      type="button"
    >
      Test
      <div
        class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Card > should render 1`] = `
<DocumentFragment>
  <div>
    <button
      class="css-cqna23"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;
